Bug 547142 - [OOPP] Exiting full-screen video locks the browser. r=bent.