dom/plugins/PluginInstanceParent.cpp
@@ -53,6 +53,9 @@
 extern const PRUnichar* kOOPPPluginFocusEventId;
 UINT gOOPPPluginFocusEvent =
     RegisterWindowMessage(kOOPPPluginFocusEventId);
+extern const PRUnichar* kOOPPGetBaseMessageEventId;
+UINT gOOPPGetBaseMessageEvent =
+    RegisterWindowMessage(kOOPPGetBaseMessageEventId);
 UINT gOOPPSpinNativeLoopEvent =
     RegisterWindowMessage(L"SyncChannel Spin Inner Loop Message");
 UINT gOOPPStopNativeLoopEvent =
@@ -540,6 +543,7 @@ PluginInstanceParent::NPP_HandleEvent(void* event)
                 SharedSurfaceBeforePaint(rect, npremoteevent);
                 CallNPP_HandleEvent(npremoteevent, &handled);
                 SharedSurfaceAfterPaint(npevent);
+                return handled;
             }
             break;
 
@@ -559,14 +563,32 @@ PluginInstanceParent::NPP_HandleEvent(void* event)
                   !wcscmp(szClass, L"ShockwaveFlashFullScreen")) {
                   return 0;
               }
-              // intentional fall through
             }
+            break;
 
-            default:
-                if (!CallNPP_HandleEvent(npremoteevent, &handled))
-                    return 0;
+            case WM_IME_SETCONTEXT:
+            {
+              // Children can activate the underlying parent browser window
+              // generating nested events that arrive here. Check the base
+              // event this event was triggered by and unlock the child using
+              // ReplyMessage if needed.
+              HWND hwnd = NULL;
+              UINT baseMsg = 0;
+              mNPNIface->getvalue(mNPP, NPNVnetscapeWindow, &hwnd);
+              NS_ASSERTION(GetWindowThreadProcessId(hwnd, nsnull) ==
+                           GetCurrentThreadId(),
+                           "hwnd belongs to another thread!");
+              if (hwnd &&
+                  SendMessage(hwnd, gOOPPGetBaseMessageEvent,
+                              (WPARAM)&baseMsg, 0) &&
+                  baseMsg == WM_ACTIVATE) {
+                  ReplyMessage(0);
+              }
+            }
             break;
         }
+        if (!CallNPP_HandleEvent(npremoteevent, &handled))
+            return 0;
     }
     else {
         if (!CallNPP_HandleEvent(npremoteevent, &handled))
